# CodexOAuthAPI

./: .env.example  .gitignore  README.ko.md  README.md  pyproject.toml
docs/plans/: 2026-07-22-response-latency.md
docs/security-reports/: 2026-07-09-131700.json
docs/superpowers/plans/: 2026-07-09-dotenv-configuration.md  2026-07-09-edge-ip-token-access-control.md  2026-07-10-windows-logon-autostart.md
docs/superpowers/specs/: 2026-07-09-dotenv-configuration-design.md  2026-07-09-edge-ip-token-access-control-design.md  2026-07-10-windows-logon-autostart-design.md
src/codex_oauth_api/: __init__.py  cli.py  isolated_codex.py  main.py  server.py
tests/: test_dependency_boundary.py  test_isolated_codex.py  test_main.py  test_openai_compatible_api.py
