[project]
name = "codex-oauth-api"
version = "0.1.0"
description = "OpenAI-compatible API server backed by an isolated Codex SDK client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-codex>=0.1.0b2",
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
codex-oauth-api = "codex_oauth_api.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_oauth_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
